; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/zd1211rw/extr_zd_usb.c_zd_submit_waiting_urb.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/zd1211rw/extr_zd_usb.c_zd_submit_waiting_urb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zd_usb = type { i32, %struct.urb* }
%struct.urb = type { i32 }

@URB_NO_INTERRUPT = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"error in usb_submit_urb(). Error number %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.zd_usb*, i32)* @zd_submit_waiting_urb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zd_submit_waiting_urb(%struct.zd_usb* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.zd_usb*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.urb*, align 8
  store %struct.zd_usb* %0, %struct.zd_usb** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %8 = load %struct.zd_usb*, %struct.zd_usb** %4, align 8
  %9 = getelementptr inbounds %struct.zd_usb, %struct.zd_usb* %8, i32 0, i32 1
  %10 = load %struct.urb*, %struct.urb** %9, align 8
  store %struct.urb* %10, %struct.urb** %7, align 8
  %11 = load %struct.urb*, %struct.urb** %7, align 8
  %12 = icmp ne %struct.urb* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %47

14:                                               ; preds = %2
  %15 = load %struct.zd_usb*, %struct.zd_usb** %4, align 8
  %16 = getelementptr inbounds %struct.zd_usb, %struct.zd_usb* %15, i32 0, i32 1
  store %struct.urb* null, %struct.urb** %16, align 8
  %17 = load i32, i32* %5, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %25, label %19

19:                                               ; preds = %14
  %20 = load i32, i32* @URB_NO_INTERRUPT, align 4
  %21 = load %struct.urb*, %struct.urb** %7, align 8
  %22 = getelementptr inbounds %struct.urb, %struct.urb* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = or i32 %23, %20
  store i32 %24, i32* %22, align 4
  br label %25

25:                                               ; preds = %19, %14
  %26 = load %struct.urb*, %struct.urb** %7, align 8
  %27 = load %struct.zd_usb*, %struct.zd_usb** %4, align 8
  %28 = getelementptr inbounds %struct.zd_usb, %struct.zd_usb* %27, i32 0, i32 0
  %29 = call i32 @usb_anchor_urb(%struct.urb* %26, i32* %28)
  %30 = load %struct.urb*, %struct.urb** %7, align 8
  %31 = load i32, i32* @GFP_KERNEL, align 4
  %32 = call i32 @usb_submit_urb(%struct.urb* %30, i32 %31)
  store i32 %32, i32* %6, align 4
  %33 = load i32, i32* %6, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %42

35:                                               ; preds = %25
  %36 = load %struct.urb*, %struct.urb** %7, align 8
  %37 = call i32 @usb_unanchor_urb(%struct.urb* %36)
  %38 = load %struct.zd_usb*, %struct.zd_usb** %4, align 8
  %39 = call i32 @zd_usb_dev(%struct.zd_usb* %38)
  %40 = load i32, i32* %6, align 4
  %41 = call i32 @dev_dbg_f(i32 %39, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %40)
  br label %43

42:                                               ; preds = %25
  br label %43

43:                                               ; preds = %42, %35
  %44 = load %struct.urb*, %struct.urb** %7, align 8
  %45 = call i32 @usb_free_urb(%struct.urb* %44)
  %46 = load i32, i32* %6, align 4
  store i32 %46, i32* %3, align 4
  br label %47

47:                                               ; preds = %43, %13
  %48 = load i32, i32* %3, align 4
  ret i32 %48
}

declare dso_local i32 @usb_anchor_urb(%struct.urb*, i32*) #1

declare dso_local i32 @usb_submit_urb(%struct.urb*, i32) #1

declare dso_local i32 @usb_unanchor_urb(%struct.urb*) #1

declare dso_local i32 @dev_dbg_f(i32, i8*, i32) #1

declare dso_local i32 @zd_usb_dev(%struct.zd_usb*) #1

declare dso_local i32 @usb_free_urb(%struct.urb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
